--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="images">
 
 
-<img src="images/img1.jpg"  height="500"  width="100%">
+<img src="images/img1.jpg">
 <img src="images/img2.jpg">
 <img src="images/img3.jpg">
 <img src="images/img4.jpg">
