--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <div class="images">
 
 
-<img src="images/img1.jpg">
-<img src="images/img2.jpg">
-<img src="images/img3.jpg">
-<img src="images/img4.jpg">
-<img src="images/img5.jpg">
-<img src="images/img6.jpg">
+<img src="images/img1.jpg" width="100%">
+<img src="images/img2.jpg"width="100%">
+<img src="images/img3.jpg"width="100%">
+<img src="images/img4.jpg"width="100%">
+<img src="images/img5.jpg"width="100%">
+<img src="images/img6.jpg"width="100%">
 
 
 
