--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     
-    <img name="slide" width="70%" height="60%">
+    <div class="page-container">
+    
+    <img name="slide">
 
 
 
@@ -63,7 +65,7 @@
 
 </div>
 </div>
-
+</div>
 <script src="index.js"></script>
 
 
