--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     
     <div class="page-container">
     
-    <img name="slide">
-
+    <div class="picture">
+        <img name="slide">
+</div>
 
 
 
