--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <div class="container"  id="container">
 
-        <h1 class="heading">  User feedback </h1>
+        <h1 class="heading">your feedback is valuable to us! </h1>
         
         
         <div class="ratings-container">
