--- a/index.html
+++ b/index.html
@@ -51,6 +51,17 @@
 
 <button class="btn"  id="btn"> Share your feelings </button>
 
+
+<form id="myForm" action="/action_page.php">
+    First name: <input type="text" name="fname"><br>
+    Last name: <input type="text" name="lname"><br><br>
+    <input type="button" onclick="myFunction()" value="Submit form">
+  </form>
+  
+
+
+
+
 </div>
 </div>
 </div>
