--- a/index.html
+++ b/index.html
@@ -70,7 +70,13 @@
     <input type="button" onclick="myFunction()" value="Submit form">
   </form>
   
+<div class="text">
 
+    want to see our special meal?
+    
+    <button type="button" class="btn1">click here</button>
+
+</div>
 
 
 
