--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
   
 <div class="text">
 
+    <img src="images/"
     want to see our special meal?
     
     <button type="button" class="btn1">click here</button>
