--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   
 <div class="text">
 
-    <img src="images/"
+    <img src="images/img7.jpg" class="pic">
     want to see our special meal?
     
     <button type="button" class="btn1">click here</button>
