--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="page-container">
     
     <div class="picture">
-        <img name="slide" height="1276">
+        <img name="slide">
 </div>
 
 <div class="container"  id="container">
