--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <img name="slide">
 </div>
 
-<div class="container"  id="container">
+<div class="container" id="container">
 
-        <h1 class="heading">your feedback is valuable to us! </h1>
+        <div class="heading">discover our menu and give your feedback </div>>
         
         
         <div class="ratings-container">
