--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <div class="container" id="container">
 
-        <div class="heading">discover our menu and give your feedback </div>
+        <div class="heading">discover our menu and give your feedback by selecting am emoji and click on the green button </div>
         
         
         <div class="ratings-container">
