--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
 
 
 
-<button class="btn"  id="btn"> Share your feelings </button>
+<button class="btn"  id="btn"> Share your feeling </button>
 
 
 
   
 <div class="text">
 
-    want to see our special meal?
+    <p class="bold">want to see our special meal?</p>
     
     <button type="button" class="btn1">click here</button>
     <img src="images/img7.jpg" class="pic">
