--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button type="button" onclick="document.getElementById('time').innerHTML=Date()">
     click to display the time and the date</button>
     
-        <div class="top-title">topfood</div>
+        <div class="top-title">Webproject</div>
 
     </header>
     
