--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     click to display the time and the date</button>
     
         <div class="top-title">Webproject</div>
+        <div class="name">ibrahima kamagate</div>
+
 
     </header>
     
