--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
 </div>
 </div>
 </div>
+
+<!--add link to javascript file(allow javascript to access all the elements on the page)-->
 <script src="index.js"></script>
 
 
