--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
     <!--Define the page container-->
     <div class="page-container">
     
-    <div class="picture">
+    <div class="msge">
+    what do you think of the menu ?
+
+    </div>
+    
+        <div class="picture">
         <img name="slide">
 </div>
 
