--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <div class="container" id="container">
 
-        <div class="heading">discover our menu and give your feedback by selecting am emoji and click on the green button 
+        <div class="heading">Discover our menu and give your feedback by selecting an emoji and click on the green button 
             to send your review
         </div>
         
