--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <!--Header ends here-->
     <div class="msge">
-        what do you think of the menu ?
+       <p> what do you think of the menu ?</p>
     
         </div>
     <!--Define the page container-->
