--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     </header>
     <!--Header ends here-->
-    <div class="msge">
-       <p> what do you think of the menu ?</p>
+    <p class="msge">
+        what do you think of the menu ?</p>
     
         </div>
     <!--Define the page container-->
