--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
     
     
-        <div class="top-title">Webproject</div>
+        <div class="top-title">Webproject <span class="small">User feedback page</span></div>
         <div class="name">ibrahima kamagate</div>
 
     </header>
