--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <!--Header starts here-->
     <header>
     
-    
+         <div class="logo">
+
+            <img src="images/chef.png">
+         </div>
         <div class="top-title">Webproject <span class="small">User feedback page</span></div>
         <div class="name">ibrahima kamagate</div>
 
