--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <img src="images/chef.png">
          </div>
         <div class="top-title">Webproject <span class="small">User feedback page</span></div>
+        <img src="images/chef3.png">
+        
         <div class="name">ibrahima kamagate</div>
 
     </header>
