--- a/index.html
+++ b/index.html
@@ -106,9 +106,15 @@
 </div>
 
 <!--Page container Stops here-->
-
+<footer>
+    copyright.2023
+</footer>
 
 <!--Add link to javascript file(allow javascript to access all the elements on the page)-->
+
+
+
+
 <script src="index.js"></script>
 
 
