--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
             <img src="images/chef.png">
          </div>
         <div class="top-title">Webproject <span class="small">User feedback page</span></div>
-        
+        <div class="txt">
+
+            <img src="images/chef3.jpg">
+        </div>
         
         <div class="name">ibrahima kamagate</div>
 
