--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="top-title">Webproject <span class="small">User feedback page</span></div>
         <div class="txt">
 
-            <img src="images/chef3.jpg"  width="70">
+            <img src="images/chef3.jpg">
         </div>
         
         <div class="name">ibrahima kamagate</div>
