--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <button class="btn"  id="btn"> Share your feeling </button>
 
 </div>
-  
+<button type="button" class="btnback">Back</button>
 <div class="text">
 
     <p class="bold">want to see our special meal?</p>
