--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     
 <img id="slide">
 
-
+<a class="left" href="#" onclick="changeImage(-1); return false">Previous Slide</a>
+<a class="right" href="#" onclick="changeImage(1); return false">Next Slide</a>
        
 <!--Container starts here-->
 
