--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     
 <img id="slide">
 
-<a class="left" href="#" onclick="changeImage(-1); return false">Previous Slide</a>
-<a class="right" href="#" onclick="changeImage(1); return false">Next Slide</a>
+<a class="left" href="#" onclick="changeImg(-1); return false">Previous Slide</a>
+<a class="right" href="#" onclick="changeImg(1); return false">Next Slide</a>
        
 <!--Container starts here-->
 
