--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <img id="slide">
 
 <div class="move">
-<a class="left" href="#" onclick="showImg(-1); ">Previous</a>
-<a class="right" href="#" onclick="showImg(1);">Next </a>
+<a class="left" href="#" onclick="changeImg(-1); ">Previous</a>
+<a class="right" href="#" onclick="changeImg(1);">Next </a>
    
 
 
