--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <img id="slide">
 
 <div class="move">
-<a class="left" href="#" onclick="changeImage(-1); ">Previous</a>
-<a class="right" href="#" onclick="changeImage(1);">Next </a>
+<a class="left" href="#" onclick="changeImg(-1);  return false">Previous</a>
+<a class="right" href="#" onclick="changeImg(1);return false">Next </a>
    
 
 
