--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <img id="slide">
 
 <div class="move">
-<a class="left"  onclick="changeImg(-1);  return false">Previous</a>
-<a class="right" onclick="changeImg(1);  return false">Next </a>
+<a class="left"  onclick="changeImage(-1);  return false">Previous</a>
+<a class="right" onclick="changeImage(1);  return false">Next </a>
    
 
 
