--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <img id="slide">
 
 <div class="move">
-<a class="left" href="#" onclick="changeImg(-1);  return false">Previous</a>
+<a class="left" href="#" onclick="prev(1);  return false">Previous</a>
 <a class="right" href="#" onclick="changeImg(1);  return false">Next </a>
    
 
