--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
     <!--Define the page container-->
     <div class="page-container">
     
-   
+   <div class="ssection">
 <img id="slide">
 
-
-
+<div class="move">
+<a class="left" href="#" onclick="changeImg(-1);  return false">Previous</a>
+<a class="right" href="#" onclick="changeImg(1);  return false">Next </a>
+    </div>
    
 
 
