--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <a class="left" href="#" onclick="changeImg(-1);  return false">Previous</a>
 <a class="right" href="#" onclick="changeImg(1);  return false">Next </a>
     </div>
-   
+  </div> 
 
 
 
