--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!--Define the page container-->
     <div class="page-container">
     
-   <div class="ssection">
+   <div class="section">
 <img id="slide">
 
 <div class="move">
