--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="page-container">
     
    <div class="section">
-<img src="images/img2.jpg" id="slide">
+<img id="slide">
 
 <div class="move">
 <a class="left" href="#" onclick="changeImg(-1);  return false">Previous</a>
