--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
    
 <img src="images/img1.jpg" class="slide">
 
-<a class="left" href="#" onclick="prev()">Previous</a>
-<a class="right" href="#" onclick="next()">Next </a>
+<a class="left" onclick="prev()">Previous</a>
+<a class="right" onclick="next()">Next </a>
 
 
 
