--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         
     <!--Define the page container-->
     <div class="page-container">
-    
-   
+    <div class="slider">
+   <div class="inage-box">
 <img src="images/img1.jpg" class="slide">
-
+</div>
 <a class="left" onclick="prev()">Previous</a>
 <a class="right" onclick="next()">Next </a>
-
+</div>
 
 
 
