--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="page-container">
     <div class="slider">
    <div class="inage-box">
-<img src="images/img1.jpg" class="slide">
+<img src="images/img1.jpg" class="slider-img">
 </div>
 <a class="left" onclick="prev()">Previous</a>
 <a class="right" onclick="next()">Next </a>
