--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <!--Define the page container-->
     <div class="page-container">
     <div class="slider">
-   <div class="inage-box">
+   <div class="image-box">
 <img src="images/img1.jpg" class="slider-img">
 </div>
-<a class="left" onclick="prev()">Previous</a>
-<a class="right" onclick="next()">Next </a>
+<button class="left" onclick="prev()">Previous</a>
+<button class="right" onclick="next()">Next </a>
 </div>
 
 
