--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
         
     <!--Define the page container-->
     <div class="page-container">
-    <div class="slider">
-   <div class="image-box">
+    <div class="slide">
 <img src="images/img1.jpg" class="slider-img">
-</div>
+
 <button class="left" onclick="prev()">Previous</a>
 <button class="right" onclick="next()">Next </a>
 </div>
