--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!--Define the page container-->
     <div class="page-container">
     <div class="slide">
-<img src="images/img1.jpg" class="slider-img">
+<img src="images/img1.jpg" class="slider-image">
 
 <button class="left" onclick="prev()">Previous</a>
 <button class="right" onclick="next()">Next </a>
