--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
     <div class="page-container">
     <div class="slide">
 <img src="images/img1.jpg" class="slider-image">
-
+<div class="section">
 <button class="left" onclick="prev()">Previous</a>
 <button class="right" onclick="next()">Next </a>
+</div>
+
 </div>
 
 
