--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
     <div class="page-container">
     <div class="slide">
 <img src="images/img1.jpg" class="slider-image">
+
+<div id="title">
+
+</div>
+
+
 <div class="section">
 <button class="left" onclick="prev()">Previous</a>
 <button class="right" onclick="next()">Next </a>
