--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"> <!--Define webpage language-->
+<html lang="en"> <!--Define the character encoding -->
 <head>
     <meta charset="UTF-8"> <!--Define encoding-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,11 +33,12 @@
         
     <!--Define the page container-->
     <div class="page-container">
-    <div class="slide">
+    
+        <div class="slide">
 <img src="images/img1.jpg" class="slider-image">
 
 
-
+<!--Define next and previous button-->
 
 <div class="section">
 <button class="left" onclick="prev()">Previous</a>
@@ -45,9 +46,6 @@
 </div>
 
 </div>
-
-
-
 
 
 <!--Container starts here-->
@@ -122,7 +120,7 @@
     copyright.2023
 </footer>
 
-<!--Add link to javascript file(allow javascript to access all the elements on the page)-->
+<!--Add link to javascript file-->
 
 <script src="index.js"></script>
 
