--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 <!--Define next and previous button-->
 
 <div class="section">
-<button class="left" onclick="prev()">Previous</a>
-<button class="right" onclick="next()">Next </a>
+<button class="left"  onclick="prev()">Previous
+<button class="right" onclick="next()">Next 
 </div>
 
 </div>
