--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </div>
         
         <div class="name">ibrahima kamagate</div>
+        <img src="images/mypic.jpeg" class="me" width=50  height=50>
 
     </header>
     <!--Header ends here-->
