--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
     <div class="page-container">
     
         <div class="slide">
-<img src="images/img1.jpg" class="slider-image">
-
+<div class="image-box">
+            <img src="images/img1.jpg" class="slider-image">
+</div>
 
 <!--Define next and previous button-->
 
