--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 <!--Define next and previous button-->
 
 <div class="section">
-<button class="left"  onclick="prev()">Previous
-<button class="right" onclick="next()">Next 
+<button class="left"  onclick="prev()">Previous</button>
+<button class="right" onclick="next()">Next </button>
 </div>
 
 </div>
