--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!--Define the page container-->
     <div class="page-container">
     
-        <div class="slide">
+        <div class="slider">
 <div class="image-box">
             <img src="images/img1.jpg" class="slider-image">
 </div>
