--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
         
     <!--Define the page container-->
     <div class="page-container">
-    
+        <div class="slide">
         <div class="slider">
 <div class="image-box">
             <img src="images/img1.jpg" class="slider-image">
 </div>
-
 <!--Define next and previous button-->
 
 <div class="section">
@@ -48,7 +47,7 @@
 </div>
 
 </div>
-
+</div>
 
 <!--Container starts here-->
 
