"refining search by ingredient function"

--- a/index.html
+++ b/index.html
@@ -105,12 +105,14 @@
 
 <div class="search-section">
 
-<h2>find ingredients meals  for your  ingredients</h2>
+<h2>find our delicious meals by ingredient</h2>
 
 <input type="search"  id="search-input" placeholder="search by ingredients...">
 <button id="search-btn">search</button>
-<h3>your search results</h3>
 
+
+<h3>your search results</h3>
+</div>
 
 
 
