"adjust emojis size in small screens"

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!--Define next and previous button-->
 
 <div class="section">
-<button class="left"  onclick="prev()">Previous</button>
+<button class="left"  onclick="prev()">Prev</button>
 <button class="right" onclick="next()">Next </button>
 </div>
 
@@ -110,10 +110,7 @@
 
 
 <div class="food-container">
-<div class="image">
-<img src="images/cook.png">
 
-</div>
 
    
 </div>
